# cv-iasa

./: .gitignore  README.md  pyproject.toml
notebooks/: lab1.ipynb  lab2.ipynb
src/config/trainers/: alexnet.yaml
src/models/: alexnet.py
src/modules/filters/: __init__.py  base.py  box.py  gauisian.py  unsharp_masking.py
src/modules/logger/: __init__.py  wandb.py
src/modules/trainers/: __init__.py  base.py
src/utils/: conv.py  metrics.py  plots.py  seed.py  sobel.py
