[tool.poetry]
name = "cv-iasa"
version = "0.1.0"
description = ""
authors = ["Sonia Kashperova <kashperova.study@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "4.8.0.76"
numpy = "1.26.4"
matplotlib = "3.8.0"
torch = "2.2.0"
torchmetrics = "1.4.3"
plotly = "5.17.0"
tqdm = "4.66.5"
wandb = "0.18.0"
hydra-core = "1.3.2"
scikit-learn = "1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
